zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_new_tab_action_with_name_and_layout.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 2677
expression: "format!(\"{:#?}\", new_tab_instruction)"
---
NewTab(
    Some(
        ".",
    ),
    None,
    Some(
        TiledPaneLayout {
            children_split_direction: Horizontal,
            name: None,
            children: [
                TiledPaneLayout {
                    children_split_direction: Horizontal,
                    name: None,
                    children: [],
                    split_size: None,
                    run: Some(
                        Cwd(
                            ".",
                        ),
                    ),
                    borderless: false,
                    focus: None,
                    external_children_index: None,
                    children_are_stacked: false,
                    is_expanded_in_stack: false,
                    exclude_from_sync: None,
                    run_instructions_to_ignore: [],
                    hide_floating_panes: false,
                    pane_initial_contents: None,
                },
                TiledPaneLayout {
                    children_split_direction: Horizontal,
                    name: None,
                    children: [],
                    split_size: None,
                    run: Some(
                        Cwd(
                            ".",
                        ),
                    ),
                    borderless: false,
                    focus: None,
                    external_children_index: None,
                    children_are_stacked: false,
                    is_expanded_in_stack: false,
                    exclude_from_sync: None,
                    run_instructions_to_ignore: [],
                    hide_floating_panes: false,
                    pane_initial_contents: None,
                },
                TiledPaneLayout {
                    children_split_direction: Horizontal,
                    name: None,
                    children: [],
                    split_size: None,
                    run: Some(
                        Cwd(
                            ".",
                        ),
                    ),
                    borderless: false,
                    focus: None,
                    external_children_index: None,
                    children_are_stacked: false,
                    is_expanded_in_stack: false,
                    exclude_from_sync: None,
                    run_instructions_to_ignore: [],
                    hide_floating_panes: false,
                    pane_initial_contents: None,
                },
            ],
            split_size: None,
            run: None,
            borderless: false,
            focus: None,
            external_children_index: None,
            children_are_stacked: false,
            is_expanded_in_stack: false,
            exclude_from_sync: None,
            run_instructions_to_ignore: [],
            hide_floating_panes: false,
            pane_initial_contents: None,
        },
    ),
    [],
    1,
    10,
)
