zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_next_tab_action-6.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 1969
expression: "format!(\"{}\", snapshot)"
---
00 (C): 
01 (C):                                                                                 
02 (C): 
03 (C): 
04 (C): 
05 (C): 
06 (C): 
07 (C): 
08 (C): 
09 (C): 

